--- a/src/Components/NavBar/NavBar.css
+++ b/src/Components/NavBar/NavBar.css
@@ -2,6 +2,7 @@
   position: fixed;
   display: flex;
   flex-direction: row;
+  justify-content: space-evenly;
   width: 100%;
   background-color: #1F2833;
   color: #66FCF1;
