--- a/src/Components/NavBar/NavBar.css
+++ b/src/Components/NavBar/NavBar.css
@@ -2,13 +2,16 @@
   position: fixed;
   display: flex;
   flex-direction: row;
-  justify-content: space-evenly;
   width: 100%;
   background-color: #1F2833;
   color: #66FCF1;
+  box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
 }
 
 .nav-brand {
+  width: 300px;
+  text-align: center;
   font-weight: 700;
-  font-size: 1.25rem;
+  font-size: 1.5rem;
+  margin: auto 0;
 }
